# cag

./: .env.example  .gitattributes  .gitignore  =1.0.9  BENCHMARK_RESULTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  run_all.bat  run_all.sh  run_api.bat  run_api.sh  run_cag.bat  run_cag.sh  run_eval_triplet.ps1  run_frontend.bat  run_frontend.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/benchmark_corpus/: nexus_api_reference.txt  nexus_employee_handbook.txt  nexus_incident_response_runbook.txt  nexus_platform_configuration_guide.txt
docs/: cag-architecture.md
experiments/autoresearch_external/: README.md  experiment_backlog.md  program.md  target_spec.md  wow_definition.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
src/cag/: __init__.py  cli.py  config.py  llm_factory.py
src/cag/agents/: __init__.py  models.py  reasoning_agent.py  retrieval_agent.py
src/cag/api/: upload.py
src/cag/eval/: __init__.py  audit.py  benchmark_dataset.jsonl  compare.py  corpus.py  judge.py  lightrag_adapter.py  models.py  run.py  scoring.py  systems.py
src/cag/graph/: __init__.py  graph.py  nodes.py  runtime.py  state.py
src/cag/ingestion/: __init__.py  chunker.py  embedder.py  loader.py
src/cag/ui/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_agents_integration.py  test_api.py  test_cag_pipeline.py  test_eval_harness.py
tests/fixtures/: benchmark_smoke.jsonl
